# edge_dynamics

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  POC_SUMMARY.md  README.md  circuit_breaker.py  collector.py  collector_server.py  collector_server_v2.py  config.py  contributing.md  demo_resilience.py  dict_local  disk_buffer.py  docker-compose.yml  edge_agent.py  edge_agent_v2.py  poc_timeline.csv  proxy.py  pyproject.toml  report.csv  requirements.txt  self_driving_bbox_compression.csv  test_enhanced_edge_agent.py  topic_dict_report.csv  up.py
.github/workflows/: ci.yml  pre-commit.yml
dicts/: dict_index.json  sensor.engine.dict  vehicle.bounding_boxes.dict  vehicle.telemetry.dict
docs/superpowers/plans/: 2026-04-05-restructure-security-ci.md
edge_utils/: README.md  __init__.py  circuit_breaker.py  connection_pool.py  validation.py
examples/: README.md
examples/file_metadata/: README.md  sample.jsonl
examples/iot_sensors/: README.md  sample.jsonl
examples/vehicle_telemetry/: README.md  sample.jsonl
scripts/: benchmark.py  generate_poc_data.py  run_demo.sh  setup_demo_dicts.py  visualize_poc.py
src/edge_dynamics/: __init__.py  collector_server.py  config.py  edge_agent.py  security.py  structured_logging.py  train_dict.py
src/edge_dynamics/edge_utils/: __init__.py  backpressure.py  config.py  connection_pool.py  dict_lifecycle.py  logging.py  metrics.py
tests/: __init__.py  conftest.py  test_backpressure.py  test_circuit_breaker.py  test_config.py  test_dict_lifecycle.py  test_disk_buffer.py  test_edge_agent.py  test_security.py  test_train_dict.py
tests/edge_utils/: __init__.py  test_circuit_breaker.py  test_connection_pool.py  test_logging.py  test_metrics.py  test_validation.py
